Сделана структура страницы

--- a/index.html
+++ b/index.html
@@ -6,7 +6,41 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-
-
+    <input name="line" maxlength="30" size="30" value=" " readonly>
+    <div class="keyboard">
+        <div class="keyboard__line1">
+            <div class="keyboard__line1__keys">Q</div>
+            <div class="keyboard__line1__keys">W</div>
+            <div class="keyboard__line1__keys">E</div>
+            <div class="keyboard__line1__keys">R</div>
+            <div class="keyboard__line1__keys">T</div>
+            <div class="keyboard__line1__keys">Y</div>
+            <div class="keyboard__line1__keys">U</div>
+            <div class="keyboard__line1__keys">I</div>
+            <div class="keyboard__line1__keys">O</div>
+            <div class="keyboard__line1__keys">P</div>
+        </div>
+        <div class="keyboard__line2">
+            <div class="keyboard__line2__keys">A</div>
+            <div class="keyboard__line2__keys">S</div>
+            <div class="keyboard__line2__keys">D</div>
+            <div class="keyboard__line2__keys">F</div>
+            <div class="keyboard__line2__keys">G</div>
+            <div class="keyboard__line2__keys">H</div>
+            <div class="keyboard__line2__keys">J</div>
+            <div class="keyboard__line2__keys">K</div>
+            <div class="keyboard__line2__keys">L</div>
+        </div>
+        <div class="keyboard__line3">
+            <div class="keyboard__line2__keys">Z</div>
+            <div class="keyboard__line2__keys">X</div>
+            <div class="keyboard__line2__keys">C</div>
+            <div class="keyboard__line2__keys">V</div>
+            <div class="keyboard__line2__keys">B</div>
+            <div class="keyboard__line2__keys">N</div>
+            <div class="keyboard__line2__keys">M</div>
+        </div>
+    </div>
+    <script src="scripts.js"></script>
 </body>
 </html>
