--- a/index.html
+++ b/index.html
@@ -1,44 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="utf-8">   <!-- туть -->
+    <meta charset="utf-8">
     <title>SoundAlphabet</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <input name="line" maxlength="30" size="30" value=" " readonly>
+    <input name="line" maxlength="35" size="35" value=" " readonly>
     <div class="keyboard">
-        <div class="keyboard__line1">
-            <div class="keyboard__line1__keys">Q</div>
-            <div class="keyboard__line1__keys">W</div>
-            <div class="keyboard__line1__keys">E</div>
-            <div class="keyboard__line1__keys">R</div>
-            <div class="keyboard__line1__keys">T</div>
-            <div class="keyboard__line1__keys">Y</div>
-            <div class="keyboard__line1__keys">U</div>
-            <div class="keyboard__line1__keys">I</div>
-            <div class="keyboard__line1__keys">O</div>
-            <div class="keyboard__line1__keys">P</div>
+        <div class="keyboard__line keyboard__line1">
+            <div class="keyboard__key">Q</div>
+            <div class="keyboard__key">W</div>
+            <div class="keyboard__key">E</div>
+            <div class="keyboard__key">R</div>
+            <div class="keyboard__key">T</div>
+            <div class="keyboard__key">Y</div>
+            <div class="keyboard__key">U</div>
+            <div class="keyboard__key">I</div>
+            <div class="keyboard__key">O</div>
+            <div class="keyboard__key">P</div>
         </div>
-        <div class="keyboard__line2">
-            <div class="keyboard__line2__keys">A</div>
-            <div class="keyboard__line2__keys">S</div>
-            <div class="keyboard__line2__keys">D</div>
-            <div class="keyboard__line2__keys">F</div>
-            <div class="keyboard__line2__keys">G</div>
-            <div class="keyboard__line2__keys">H</div>
-            <div class="keyboard__line2__keys">J</div>
-            <div class="keyboard__line2__keys">K</div>
-            <div class="keyboard__line2__keys">L</div>
+        <div class="keyboard__line keyboard__line2">
+            <div class="keyboard__key">A</div>
+            <div class="keyboard__key">S</div>
+            <div class="keyboard__key">D</div>
+            <div class="keyboard__key">F</div>
+            <div class="keyboard__key">G</div>
+            <div class="keyboard__key">H</div>
+            <div class="keyboard__key">J</div>
+            <div class="keyboard__key">K</div>
+            <div class="keyboard__key">L</div>
         </div>
-        <div class="keyboard__line3">
-            <div class="keyboard__line2__keys">Z</div>
-            <div class="keyboard__line2__keys">X</div>
-            <div class="keyboard__line2__keys">C</div>
-            <div class="keyboard__line2__keys">V</div>
-            <div class="keyboard__line2__keys">B</div>
-            <div class="keyboard__line2__keys">N</div>
-            <div class="keyboard__line2__keys">M</div>
+        <div class="keyboard__line keyboard__line3">
+            <div class="keyboard__key">Z</div>
+            <div class="keyboard__key">X</div>
+            <div class="keyboard__key">C</div>
+            <div class="keyboard__key">V</div>
+            <div class="keyboard__key">B</div>
+            <div class="keyboard__key">N</div>
+            <div class="keyboard__key">M</div>
+            <div class="keyboard__key">_</div>
         </div>
     </div>
     <script src="scripts.js"></script>
