Исправлены неточности в css и добавлены обработчики по нажатию.

--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <input name="line" maxlength="35" size="35" value=" " readonly>
-    <div class="keyboard">
+    <input name="line" id="textbar" maxlength="35" size="35" value=" " readonly>
+    <div class="keyboard" onclick="KeyboardClick()">
         <div class="keyboard__line keyboard__line1">
             <div class="keyboard__key">Q</div>
             <div class="keyboard__key">W</div>
