--- a/index.html
+++ b/index.html
@@ -5,41 +5,41 @@
     <title>SoundAlphabet</title>
     <link rel="stylesheet" href="styles.css">
 </head>
-<body>
+<body onkeypress="KeyPress()" onkeydown="KeyDown()" onkeyup="KeyUp()">
     <input name="line" id="textbar" maxlength="35" size="35" value=" " readonly>
     <div class="keyboard" onclick="KeyboardClick()">
         <div class="keyboard__line keyboard__line1">
-            <div class="keyboard__key">Q</div>
-            <div class="keyboard__key">W</div>
-            <div class="keyboard__key">E</div>
-            <div class="keyboard__key">R</div>
-            <div class="keyboard__key">T</div>
-            <div class="keyboard__key">Y</div>
-            <div class="keyboard__key">U</div>
-            <div class="keyboard__key">I</div>
-            <div class="keyboard__key">O</div>
-            <div class="keyboard__key">P</div>
+            <div class="keyboard__key" id="Q">Q</div>
+            <div class="keyboard__key" id="W">W</div>
+            <div class="keyboard__key" id="E">E</div>
+            <div class="keyboard__key" id="R">R</div>
+            <div class="keyboard__key" id="T">T</div>
+            <div class="keyboard__key" id="Y">Y</div>
+            <div class="keyboard__key" id="U">U</div>
+            <div class="keyboard__key" id="I">I</div>
+            <div class="keyboard__key" id="O">O</div>
+            <div class="keyboard__key" id="P">P</div>
         </div>
         <div class="keyboard__line keyboard__line2">
-            <div class="keyboard__key">A</div>
-            <div class="keyboard__key">S</div>
-            <div class="keyboard__key">D</div>
-            <div class="keyboard__key">F</div>
-            <div class="keyboard__key">G</div>
-            <div class="keyboard__key">H</div>
-            <div class="keyboard__key">J</div>
-            <div class="keyboard__key">K</div>
-            <div class="keyboard__key">L</div>
+            <div class="keyboard__key" id="A">A</div>
+            <div class="keyboard__key" id="S">S</div>
+            <div class="keyboard__key" id="D">D</div>
+            <div class="keyboard__key" id="F">F</div>
+            <div class="keyboard__key" id="G">G</div>
+            <div class="keyboard__key" id="H">H</div>
+            <div class="keyboard__key" id="J">J</div>
+            <div class="keyboard__key" id="K">K</div>
+            <div class="keyboard__key" id="L">L</div>
         </div>
         <div class="keyboard__line keyboard__line3">
-            <div class="keyboard__key">Z</div>
-            <div class="keyboard__key">X</div>
-            <div class="keyboard__key">C</div>
-            <div class="keyboard__key">V</div>
-            <div class="keyboard__key">B</div>
-            <div class="keyboard__key">N</div>
-            <div class="keyboard__key">M</div>
-            <div class="keyboard__key">_</div>
+            <div class="keyboard__key" id="Z">Z</div>
+            <div class="keyboard__key" id="X">X</div>
+            <div class="keyboard__key" id="C">C</div>
+            <div class="keyboard__key" id="V">V</div>
+            <div class="keyboard__key" id="B">B</div>
+            <div class="keyboard__key" id="N">N</div>
+            <div class="keyboard__key" id="M">M</div>
+            <div class="keyboard__key" id=".">.</div>
         </div>
     </div>
     <script src="scripts.js"></script>
